--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.19.3",
+    "axios": "^1.7.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "swiper": "^11.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
