--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "axios": "^1.7.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
+    "react-select": "^5.8.0",
     "swiper": "^11.1.11"
   },
   "devDependencies": {
